# pyrencode

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  KEYWORDS.txt  MANIFEST.in  README.md  README.rst  cookbook.yaml  makefile  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: build.yml  lint.yml  tests.yml
docs/: CHANGELOG.md  README.md  installation.md  usage.md
docs/source/: conf.py  installation.rst  usage.rst
pyrencode/: __init__.py  decode.py  encode.py
pyrencode/settings/: __init__.py  constants.py  utils.py
src/pyrencode/: __init__.py  __version__.py  constants.py  decode.py  encode.py  utils.py
src/pyrencode/settings/: __init__.py  constants.py
tests/: test_roundtrip.py
tests/pyrencode/: test_decode.py  test_encode.py  test_respect_original.py  test_roundtrip.py  test_version.py
tests/test_pyrencode/: test_encode.py  test_roundtrip.py
