[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 79
target-version = ["py36", "py37", "py38"]

[tool.poetry]
name = "pyrencode"
version = "0.1.3"
description = "A pure python rencoder"
authors = ["spapanik <spapanik21@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "*", allows-prereleases = true}
isort = "^4.3"

pytest = "^5.1"
pytest-cov = "^2.8"
coveralls = "^1.8"

ipython = "^7.8"
ipdb = "^0.12"
