[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
target-version = ["py36", "py37", "py38"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
known_tests = "tests"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER", "TESTS"]

[tool.poetry]
name = "pyrencode"
version = "0.1.3"
description = "A pure python rencoder"
authors = ["spapanik <spapanik21@gmail.com>"]

license = "MIT"
readme = "README.md"
include = ["CHANGELOG.md"]

repository = "https://github.com/spapanik/pyrencode"
keywords = ["encoding"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
black = {version = "*", allows-prereleases = true}
isort = "^4.3"

pytest = "^5.1"
pytest-cov = "^2.8"
coveralls = "^1.8"

ipython = "^7.8"
ipdb = "^0.12"
