[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
target-version = ["py38", "py39", "py310", "py311"]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_reexport = true
show_error_codes = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
warn_unused_configs = true

[tool.ruff]
select = [
    "A",
    "B",
    "C4",
    "E",
    "ERA",
    "EXE",
    "F",
    "G",
    "I",
    "N",
    "PTH",
    "T10",
    "TID",
    "UP",
]
ignore = ["E501"]
src = ["src"]
target-version = "py38"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.flake8-tidy-imports.banned-api]
"mock".msg = "Use unittest.mock"
"pytz".msg = "Use zoneinfo"

[tool.pytest.ini_options]
addopts = "-vv --cov --cov-report=term-missing:skip-covered"
testpaths = "tests"

[tool.coverage.run]
source = ["src/"]
data_file = ".coverage_cache/coverage.dat"

[tool.poetry]
name = "pyrencode"
version = "0.2.0"
description = "A pure python rencoder"
authors = [
    "Stephanos Kuma <stephanos@kuma.ai>",
]

license = "LGPL-3.0+"
readme = "README.rst"

repository = "https://github.com/spapanik/pyrencode"

keywords = ["encoding"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
# python version
python = "^3.8"

[tool.poetry.group.dev.dependencies]
ipdb = {version = "^0.13", python = "^3.9"}
ipython = {version = "^8.11", python = "^3.9"}
pipdeptree = "^2.5"

[tool.poetry.group.lint.dependencies]
black = "^23.1"
mypy = "^1.0"
ruff = "^0.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.1"
pytest-cov = "^4.0"
rencode = "^1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1"
sphinx-rtd-theme = "^1.2"
